feat: remove emulators

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
-version: '3'
+version: '3.9'
 networks:
-  local:
-    driver: bridge
+  backend:
+  frontend:
 services:
   gorda:
     container_name: gorda_dock
@@ -12,24 +12,9 @@ services:
     environment:
       - FIREBASE_TOKEN=${FIREBASE_TOKEN}
     networks:
-      - local
+      - frontend
     ports:
       - "5000:5000"
-    volumes:
-      - ../:/home/node/apps/
-  emulators:
-    container_name: emulators
-    depends_on:
-      - gorda
-    build:
-      context: ./emulators
-      args:
-        - FIREBASE_TOKEN=${FIREBASE_TOKEN}
-    environment:
-      - FIREBASE_TOKEN=${FIREBASE_TOKEN}
-    networks:
-      - local
-    ports:
       - "4000:4000"
       - "4400:4400"
       - "4500:4500"
@@ -40,4 +25,4 @@ services:
       - "9099:9099"
       - "9005:9005"
     volumes:
-      - ../:/home/node/firebase/
+      - ../:/home/node/apps/
