feat: add firebaseAccount.json

--- a/emulators/Dockerfile
+++ b/emulators/Dockerfile
@@ -27,6 +27,8 @@ RUN firebase setup:emulators:database \
 
 ADD ./entrypoint.sh /
 
+COPY ../firebaseAccount.json /home/firebaseAccount.json
+
 RUN mkdir /home/node/firebase
 
 WORKDIR /home/node/firebase/admin
