--- a/emulators/firebase.json
+++ b/emulators/firebase.json
@@ -47,6 +47,10 @@
     "functions": {
       "port": 5001,
       "host": "0.0.0.0"
+    },
+    "firestore": {
+      "port": 8080,
+      "host": "0.0.0.0"
     }
   },
   "storage": {
