--- a/emulators/Dockerfile
+++ b/emulators/Dockerfile
@@ -5,9 +5,6 @@ LABEL maintainer="devalexandrecr@gmail.com"
 # Start as root
 USER root
 
-ADD ./entrypoint.sh /
-RUN chmod +x /entrypoint.sh
-
 # Install Zsh and java
 RUN apt-get update -y && \
     mkdir /etc/ssl/certs/java/ && \
@@ -30,12 +27,11 @@ ENV PATH=~/.npm-global/bin:$PATH
 RUN firebase setup:emulators:database \
     && firebase setup:emulators:storage \
     && firebase setup:emulators:ui \
-    && firebase setup:emulators:pubsub
-
-COPY ./firebaseAccount.json /home/firebaseAccount.json
+    && firebase setup:emulators:pubsub \
+    && firebase setup:emulators:firestore
 
 RUN mkdir /home/node/firebase
 
 WORKDIR /home/node/firebase/admin
 
-ENTRYPOINT ["/entrypoint.sh"]
+CMD ["tail", "-f", "/dev/null"]
