feat: add Oh My Zsh installation and configuration in Dockerfile

--- a/ia/Dockerfile
+++ b/ia/Dockerfile
@@ -30,6 +30,32 @@ COPY Pipfile* ./
 # Install dependencies if Pipfile exists
 RUN if [ -f "Pipfile" ]; then pipenv install --system --deploy; fi
 
+# Install Oh My Zsh for the node user
+
+RUN sh -c "$(curl -fsSL https://raw.githubusercontent.com/ohmyzsh/ohmyzsh/master/tools/install.sh) --keep-zshrc" && \
+    sed -i -r 's/^plugins=\(.*?\)$/plugins=(laravel5)/' /root/.zshrc && \
+    echo '\n\
+bindkey "^[OB" down-line-or-search\n\
+bindkey "^[OC" forward-char\n\
+bindkey "^[OD" backward-char\n\
+bindkey "^[OF" end-of-line\n\
+bindkey "^[OH" beginning-of-line\n\
+bindkey "^[[1~" beginning-of-line\n\
+bindkey "^[[3~" delete-char\n\
+bindkey "^[[4~" end-of-line\n\
+bindkey "^[[5~" up-line-or-history\n\
+bindkey "^[[6~" down-line-or-history\n\
+bindkey "^?" backward-delete-char\n' >> /root/.zshrc && \
+    sh -c "git clone https://github.com/zsh-users/zsh-autosuggestions ~/.oh-my-zsh/custom/plugins/zsh-autosuggestions" && \
+    sed -i 's~plugins=(~plugins=(zsh-autosuggestions ~g' /root/.zshrc && \
+    sed -i '1iZSH_AUTOSUGGEST_BUFFER_MAX_SIZE=20' /root/.zshrc && \
+    sed -i '1iZSH_AUTOSUGGEST_STRATEGY=(history completion)' /root/.zshrc && \
+    sed -i '1iZSH_AUTOSUGGEST_USE_ASYNC=1' /root/.zshrc && \
+    sed -i '1iTERM=xterm-256color' /root/.zshrc && \
+    echo "" >> /root/.bashrc && \
+    echo "" >> /root/.zshrc && \
+    echo "" >> /root/.zshrc
+
 # Create app directory structure
 RUN mkdir -p /app/src
 
