fix: update volume path for IA service and install zsh in Dockerfile

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -73,6 +73,6 @@ services:
     ports:
       - "8000:8000"
     volumes:
-      - ../ia-app:/app/src
+      - ../ia-app:/app
     environment:
       - PYTHONPATH=/app
