feat: add tty support and set default shell to zsh for ia service

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -72,7 +72,9 @@ services:
       - backend
     ports:
       - "8000:8000"
+    tty: true
     volumes:
       - ../ia-app:/app
     environment:
       - PYTHONPATH=/app
+      - SHELL=/bin/zsh
