feat: add PostgreSQL service configuration with Docker support and initialization script

--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,14 @@
 GOOGLE_APPLICATION_CREDENTIALS=/home/firebaseAccount.json
+
+# PostgreSQL Configuration
+POSTGRES_DB=gorda_db
+POSTGRES_USER=postgres
+POSTGRES_PASSWORD=your_postgres_password
+POSTGRES_ROOT_PASSWORD=your_root_password
+
+# Database connection settings
+DB_HOST=postgres
+DB_PORT=5432
+DB_NAME=gorda_db
+DB_USER=root
+DB_PASSWORD=your_root_password
